# SRB2

./: 3dsbuild.sh  CMakeLists.txt  Makefile  README.md  c2rust-lib.rs  debug-crashlogs.sh
assets/: CMakeLists.txt
meta/: app.rsf
src/: CMakeLists.txt  Makefile  am_map.rs  b_bot.rs  command.rs  comptime.rs  console.c  console.rs  d_clisrv.c  d_clisrv.h  d_clisrv.rs  d_main.c  d_main.h  d_main.rs  d_net.rs  d_netcmd.c  d_netcmd.h  d_netcmd.rs  d_netfil.rs  deh_lua.rs  deh_soc.rs  deh_tables.c  deh_tables.rs  dehacked.rs  doomdef.h  doomtype.h  f_finale.c  f_finale.rs  f_wipe.rs  filesrch.h  filesrch.rs  g_demo.rs  g_game.c  g_game.rs  g_input.h  g_input.rs  http_mserv.rs  hu_stuff.c  hu_stuff.rs  i_tcp.rs  (+93 more)
src/Makefile.d/: dummy.mk
src/blua/: lbaselib.rs  liolib.rs  luaconf.h
src/dummy/: i_main.c  i_sound.c  i_system.c  i_system.rs  i_video.c
src/hardware/: Sourcefile  hw_cache.c  hw_clip.c  hw_data.h  hw_defs.h  hw_draw.c  hw_light.c  hw_main.c  hw_main.h  hw_md2.c  hw_vcache.h
src/hardware.bak/: hw_md2.c
src/hardware/r_opengl/: r_opengl.c
src/nds/: .i_video.c.swp  Sourcefile  i_sound.bak  i_sound.c  i_system.c  i_video.c  r_nds3d.c  r_nds3d.h  r_queue.c  r_queue.h  r_texcache.c
src/netcode/: d_netcmd.c  d_netcmd.h
src/sdl/: CMakeLists.txt  i_main.c  i_system.c
src/sdl/emscripten/: CMakeLists.txt
